--- a/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
+++ b/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
@@ -533,13 +533,13 @@ CONFIG_BOUNCE=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_CLEANCACHE is not set
-CONFIG_FRONTSWAP=y
+# CONFIG_FRONTSWAP is not set
 CONFIG_ZSMALLOC_NEW=y
 CONFIG_PGTABLE_MAPPING=y
-CONFIG_ZSWAP=y
+# CONFIG_ZSWAP is not set
 # CONFIG_ZSWAP_ENABLE_WRITEBACK is not set
 CONFIG_DIRECT_RECLAIM_FILE_PAGES_ONLY=y
-CONFIG_INCREASE_MAXIMUM_SWAPPINESS=y
+# CONFIG_INCREASE_MAXIMUM_SWAPPINESS is not set
 CONFIG_FIX_INACTIVE_RATIO=y
 CONFIG_TIGHT_PGDAT_BALANCE=y
 # CONFIG_SWAP_ENABLE_READAHEAD is not set
@@ -3762,7 +3762,7 @@ CONFIG_SEC_SLOW_MODE=y
 #
 CONFIG_SEC_PM=y
 CONFIG_SEC_PM_DEBUG=y
-CONFIG_VNSWAP=y
+# CONFIG_VNSWAP is not set
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
