--- a/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
+++ b/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
@@ -639,7 +639,7 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_EXYNOS_CPUIDLE_C2=y
 CONFIG_EXYNOS_CLUSTER_POWER_DOWN=y
 # CONFIG_CPUIDLE_TEST_SYSFS is not set
-CONFIG_EXYNOS_IDLE_CLOCK_DOWN=y
+# CONFIG_EXYNOS_IDLE_CLOCK_DOWN is not set
 
 #
 # Floating point emulation
