--- a/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
+++ b/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
@@ -51,7 +51,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-Googy-Max-N4-v1.1"
+CONFIG_LOCALVERSION="-Googy-Max-N4-v1.3-b1"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -620,7 +620,7 @@ CONFIG_MODE_AUTO_CHANGE=y
 #
 # ARM CPU frequency scaling drivers
 #
-CONFIG_ARM_BIG_LITTLE_CPUFREQ=y
+# CONFIG_ARM_BIG_LITTLE_CPUFREQ is not set
 # CONFIG_ARM_EXYNOS_CPUFREQ is not set
 CONFIG_ARM_EXYNOS_MP_CPUFREQ=y
 # CONFIG_ARM_EXYNOS4210_CPUFREQ is not set
