--- a/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
+++ b/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
@@ -620,7 +620,7 @@ CONFIG_MODE_AUTO_CHANGE=y
 #
 # ARM CPU frequency scaling drivers
 #
-CONFIG_ARM_BIG_LITTLE_CPUFREQ=y
+# CONFIG_ARM_BIG_LITTLE_CPUFREQ is not set
 # CONFIG_ARM_EXYNOS_CPUFREQ is not set
 CONFIG_ARM_EXYNOS_MP_CPUFREQ=y
 # CONFIG_ARM_EXYNOS4210_CPUFREQ is not set
