defconfig: enable CONFIG_CRYPTO_SHA1_ARM_NEON

--- a/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
+++ b/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
@@ -21,6 +21,7 @@ CONFIG_DEFAULT_CUBIC=y
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="cubic"
 CONFIG_KERNEL_MODE_NEON=y
+CONFIG_CRYPTO_SHA1_ARM_NEON=y
 #
 #
 #
