defconfig: enable DYNAMIC_FSYNC

--- a/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
+++ b/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
@@ -28,6 +28,7 @@ CONFIG_HAVE_KERNEL_LZ4=y
 # CONFIG_RD_LZ4 is not set
 # CONFIG_CRYPTO_LZ4 is not set
 # CONFIG_CRYPTO_LZ4HC is not set
+CONFIG_DYNAMIC_FSYNC=y
 #
 #
 #
