--- a/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
+++ b/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
@@ -135,7 +135,7 @@ CONFIG_RCU_FANOUT_LEAF=16
 # CONFIG_IKCONFIG is not set
 CONFIG_LOG_BUF_SHIFT=18
 CONFIG_CGROUPS=y
-CONFIG_CGROUP_DEBUG=y
+# CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
 # CONFIG_CPUSETS is not set
@@ -221,7 +221,7 @@ CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_GENERIC_IDLE_POLL_SETUP=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
-CONFIG_HAVE_DMA_API_DEBUG=y
+# CONFIG_HAVE_DMA_API_DEBUG is not set
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
 CONFIG_ARCH_WANT_IPC_PARSE_VERSION=y
 CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
@@ -689,10 +689,10 @@ CONFIG_PM_RUNTIME=y
 CONFIG_PM_RUNTIME_TEST_SYSFS=y
 # CONFIG_PM_DOMAIN_DEBUG is not set
 CONFIG_PM=y
-CONFIG_PM_DEBUG=y
+# CONFIG_PM_DEBUG is not set
 # CONFIG_PM_ADVANCED_DEBUG is not set
 # CONFIG_PM_TEST_SUSPEND is not set
-CONFIG_PM_SLEEP_DEBUG=y
+# CONFIG_PM_SLEEP_DEBUG is not set
 # CONFIG_APM_EMULATION is not set
 CONFIG_ARCH_HAS_OPP=y
 CONFIG_PM_OPP=y
@@ -3107,7 +3107,7 @@ CONFIG_USB_SUPPORT=y
 CONFIG_USB_COMMON=y
 CONFIG_USB_ARCH_HAS_HCD=y
 CONFIG_USB=y
-CONFIG_USB_DEBUG=y
+# CONFIG_USB_DEBUG is not set
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 
 #
@@ -3788,7 +3788,7 @@ CONFIG_SEC_SLOW_MODE=y
 # Samsung TN Power Management Options
 #
 CONFIG_SEC_PM=y
-CONFIG_SEC_PM_DEBUG=y
+# CONFIG_SEC_PM_DEBUG is not set
 CONFIG_VNSWAP=y
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
@@ -4261,7 +4261,7 @@ CONFIG_MAGIC_SYSRQ=y
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_READABLE_ASM is not set
 # CONFIG_UNUSED_SYMBOLS is not set
-CONFIG_DEBUG_FS=y
+# CONFIG_DEBUG_FS is not set
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_DEBUG_KERNEL=y
@@ -4279,7 +4279,7 @@ CONFIG_DETECT_HUNG_TASK=y
 CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
 # CONFIG_BOOTPARAM_HUNG_TASK_PANIC is not set
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=0
-CONFIG_SCHED_DEBUG=y
+# CONFIG_SCHED_DEBUG is not set
 # CONFIG_SCHEDSTATS is not set
 # CONFIG_TIMER_STATS is not set
 # CONFIG_DEBUG_OBJECTS is not set
@@ -4387,10 +4387,10 @@ CONFIG_UNCOMPRESS_INCLUDE="mach/uncompress.h"
 #
 # Samsung Rooting Restriction Feature
 #
-# CONFIG_SEC_RESTRICT_ROOTING is not set
-# CONFIG_SEC_RESTRICT_SETUID is not set
-# CONFIG_SEC_RESTRICT_FORK is not set
-# CONFIG_SEC_RESTRICT_ROOTING_LOG is not set
+CONFIG_SEC_RESTRICT_ROOTING=y
+CONFIG_SEC_RESTRICT_SETUID=y
+CONFIG_SEC_RESTRICT_FORK=y
+CONFIG_SEC_RESTRICT_ROOTING_LOG=y
 
 #
 # Security options
