--- a/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
+++ b/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
@@ -567,7 +567,7 @@ CONFIG_FRONTSWAP=y
 CONFIG_ZSMALLOC_NEW=y
 CONFIG_PGTABLE_MAPPING=y
 CONFIG_ZSWAP=y
-CONFIG_ZSWAP_ENABLE_WRITEBACK=y
+# CONFIG_ZSWAP_ENABLE_WRITEBACK is not set
 CONFIG_DIRECT_RECLAIM_FILE_PAGES_ONLY=y
 CONFIG_INCREASE_MAXIMUM_SWAPPINESS=y
 CONFIG_FIX_INACTIVE_RATIO=y
