--- a/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
+++ b/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
@@ -23,7 +23,7 @@ CONFIG_DEFAULT_TCP_CONG="cubic"
 CONFIG_KERNEL_MODE_NEON=y
 CONFIG_CRYPTO_SHA1_ARM_NEON=y
 CONFIG_CRYPTO_SHA512_ARM_NEON=y
-CONFIG_HAVE_KERNEL_LZ4=y
+# CONFIG_HAVE_KERNEL_LZ4 is not set
 # CONFIG_KERNEL_LZ4 is not set
 # CONFIG_RD_LZ4 is not set
 # CONFIG_CRYPTO_LZ4 is not set
