--- a/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
+++ b/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
@@ -56,7 +56,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-Googy-Max-N4-v1.6"
+CONFIG_LOCALVERSION="-Googy-Max-N4-v1.7-c05"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -590,9 +590,7 @@ CONFIG_USE_OF=y
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
 # CONFIG_ARM_APPENDED_DTB is not set
-CONFIG_CMDLINE="console=ram vmalloc=384m ehci_hcd.park=3  androidboot.selinux=permissive androidboot.hardware=universal5433  androidboot.sec_atd.tty=/dev/ttySAC1 androidboot.serialno=41005255cac5b10b"
-# CONFIG_CMDLINE_FROM_BOOTLOADER is not set
-# CONFIG_CMDLINE_EXTEND is not set
+CONFIG_CMDLINE=""
 # CONFIG_XIP_KERNEL is not set
 # CONFIG_KEXEC is not set
 # CONFIG_CRASH_DUMP is not set
@@ -627,7 +625,7 @@ CONFIG_MODE_AUTO_CHANGE=y
 #
 # ARM CPU frequency scaling drivers
 #
-# CONFIG_ARM_BIG_LITTLE_CPUFREQ is not set
+CONFIG_ARM_BIG_LITTLE_CPUFREQ=y
 # CONFIG_ARM_EXYNOS_CPUFREQ is not set
 CONFIG_ARM_EXYNOS_MP_CPUFREQ=y
 # CONFIG_ARM_EXYNOS4210_CPUFREQ is not set
