--- a/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
+++ b/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
@@ -464,11 +464,11 @@ CONFIG_MULTI_IRQ_HANDLER=y
 # CONFIG_ARM_ERRATA_754327 is not set
 # CONFIG_ARM_ERRATA_764369 is not set
 # CONFIG_ARM_ERRATA_761320 is not set
-CONFIG_ARM_ERRATA_766421=y
-CONFIG_ARM_ERRATA_773022=y
-CONFIG_ARM_ERRATA_774769=y
+# CONFIG_ARM_ERRATA_766421 is not set
+# CONFIG_ARM_ERRATA_773022 is not set
+# CONFIG_ARM_ERRATA_774769 is not set
 # CONFIG_ARM_ERRATA_775420 is not set
-CONFIG_ARM_ERRATA_798181=y
+# CONFIG_ARM_ERRATA_798181 is not set
 # CONFIG_FIQ_DEBUGGER is not set
 
 #
