--- a/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
+++ b/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
@@ -586,11 +586,13 @@ CONFIG_SECCOMP=y
 #
 CONFIG_USE_OF=y
 # CONFIG_ATAGS is not set
-# CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE is not set
+CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
-# CONFIG_ARM_APPENDED_DTB is not set
-CONFIG_CMDLINE=""
+CONFIG_ARM_APPENDED_DTB=y
+CONFIG_CMDLINE="selinux=1 enforcing=0"
+CONFIG_CMDLINE_FROM_BOOTLOADER=y
+CONFIG_CMDLINE_EXTEND=y
 # CONFIG_XIP_KERNEL is not set
 # CONFIG_KEXEC is not set
 # CONFIG_CRASH_DUMP is not set
