--- a/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
+++ b/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
@@ -56,7 +56,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-Googy-Max-N4-v1.8"
+CONFIG_LOCALVERSION="-Googy-Max-N4-v1.9_TW-b1c"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -627,7 +627,7 @@ CONFIG_MODE_AUTO_CHANGE=y
 #
 # ARM CPU frequency scaling drivers
 #
-CONFIG_ARM_BIG_LITTLE_CPUFREQ=y
+# CONFIG_ARM_BIG_LITTLE_CPUFREQ is not set
 # CONFIG_ARM_EXYNOS_CPUFREQ is not set
 CONFIG_ARM_EXYNOS_MP_CPUFREQ=y
 # CONFIG_ARM_EXYNOS4210_CPUFREQ is not set
@@ -646,7 +646,7 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_EXYNOS_CPUIDLE_C2=y
 CONFIG_EXYNOS_CLUSTER_POWER_DOWN=y
 # CONFIG_CPUIDLE_TEST_SYSFS is not set
-# CONFIG_EXYNOS_IDLE_CLOCK_DOWN is not set
+CONFIG_EXYNOS_IDLE_CLOCK_DOWN=y
 
 #
 # Floating point emulation
