Ported HOTPLUG_THREAD_STOP from N920F

--- a/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
+++ b/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
@@ -25,6 +25,7 @@ CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_RD_LZ4 is not set
 # CONFIG_CRYPTO_LZ4 is not set
 # CONFIG_CRYPTO_LZ4HC is not set
+CONFIG_HOTPLUG_THREAD_STOP=y
 #
 #
 #
