defconfig: disable more sec_debug

--- a/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
+++ b/arch/arm/configs/0googymax_exynos5433-trelte_defconfig
@@ -3744,7 +3744,7 @@ CONFIG_SEC_SYSFS=y
 #
 # Debugging Feature
 #
-CONFIG_SEC_DEBUG=y
+# CONFIG_SEC_DEBUG is not set
 
 #
 # BSP Feature
@@ -3778,7 +3778,7 @@ CONFIG_SEC_DEBUG_TSP_LOG=y
 CONFIG_SEC_DEBUG_TIMA_LOG=y
 CONFIG_SEC_DEBUG_PMU_LOG=y
 CONFIG_SEC_DEBUG_CMU_LOG=y
-CONFIG_SEC_DEBUG_SUBSYS=y
+# CONFIG_SEC_DEBUG_SUBSYS is not set
 CONFIG_SEC_DEBUG_ISR_CRASH=y
 # CONFIG_SEC_DEBUG_INPUT_HANDLER_CRASH is not set
 CONFIG_SEC_SLOW_MODE=y
